<resources>
    <string name="app_name">Eatio</string>
    <string name="action_sign_in_short">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove userRepository</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_new_fonda">New place</string>
    <string name="map_marker_def_title">Your place</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_verify_code">Verify code</string>
    <string name="hint_name">Username</string>

    <string name="fonda_name_hint">Place name</string>
    <string name="fonda_group_hint">Place group</string>
    <string name="address_hint">Address</string>
    <string name="scale_hint">Scale</string>
    <string name="open_time_hint">Open time</string>
    <string name="open_day_hint">Open day</string>
    <string name="phone_hint">Phone number</string>
    <string name="description_hint">Description</string>
    <string name="location_hint">Location</string>
    <string name="city_hint">City</string>
    <string name="culinary_hint">Culinary</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_resend_password">RESEND PASSWORD</string>
    <string name="btn_link_to_register">Register now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_verify_code">Active</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="verify_code">Type verify code was sent to your email</string>
    <string name="welcome_flash">Welcome to Eatio</string>
    <string name="resend_password">Reset password</string>

    <string name="create_fonda_success">Create new place success</string>
    <string name="message_sign_out">Do you want to sign out?</string>
    <string-array name="scale_option">
        <item>Dưới 50 chỗ ngỗi</item>
        <item>50 đến 100 chỗ ngồi</item>
        <item>Trên 100 chỗ ngồi</item>
    </string-array>

    <string-array name="city_option">
        <item>Hồ Chí Minh</item>
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
    </string-array>

    <!--left menu title-->
    <string name="left_menu_home">Home</string>
    <string name="left_menu_profile">Profile</string>
    <string name="left_menu_my_shop">My shop</string>
    <string name="left_menu_search">Search</string>
    <string name="left_menu_setting">Setting</string>
    <string name="left_menu_about">About</string>
    <string name="left_menu_sign_out">Sign out</string>
    <string name="left_menu_contact">Contact</string>
    <string name="left_menu_open">Open</string>
    <string name="left_menu_close">Close</string>

    <!--Profile user-->
    <string name="first_name">Firstname: </string>
    <string name="last_name">Lastname: </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="birth_day">Birthday:</string>
    <string name="gender">Gender:</string>
    <string name="update_profile">submit profile</string>

    <!--Error connection-->
    <string name="wrong_username_or_password">Username hoặc Password không đúng, vui lòng kiểm tra lại!</string>
    <string name="activation_code_invalid">Tài khoản này chưa được kích hoạt, vui lòng kích hoạt tài khoản!</string>
    <string name="email_invalid">Email không tồn tại, vui lòng kiểm tra lại!</string>
    <string name="username_invalid">Username không tồn tại, vui lòng kiểm tra lại!</string>
    <string name="title_activity_maps">Map</string>

    <string name="err_40401">Username không tồn tại</string>
    <string name="err_40402">Email không tồn tại</string>
    <string name="err_40901">Username đã tồn tại!</string>
    <string name="err_40902">Email đã tồn tại!</string>
    <string name="not_network">Not network connect</string>
    <string name="unknown_error">Error, please try again...</string>

    <string name="lorem">Lorem ispem lisum</string>
</resources>
