<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/nav_header_spacing_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center|top"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginBottom="@dimen/nav_header_spacing"
            android:src="@drawable/avatar_tmp"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="@dimen/nav_header_avatar_border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/first_name"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="Firstname"
                android:inputType="textPersonName"
                android:text="Luan"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/last_name"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="Lastname"
                android:inputType="textPersonName"
                android:text="Nguyen"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:text="@string/birth_day"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/txt_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingLeft="4dp"
                android:text="29 / 09 / 1995"
                android:textSize="@dimen/text_size_small" />

            <ImageButton
                android:id="@+id/btn_birthday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/primary_action_btn_selector"
                android:src="@drawable/ic_birthday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_spacing_small"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:text="@string/gender"
                android:textSize="@dimen/text_size_small" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/nav_header_spacing_small"
                android:paddingRight="@dimen/nav_header_spacing_small">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/gender_male"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/text_size_small" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/primaryText" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_female"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/text_size_small" />
            </RadioGroup>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@drawable/primary_action_btn_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/update_profile"
        android:textColor="@color/secondaryText"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>