<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:fitsSystemWindows="true"
    tools:context="com.doanchuyennganh.eatio.views.resetpassword.ResetPasswordActivity_">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/main_container"
            android:text="@string/resend_password"
            android:layout_marginTop="48dp"
            style="@style/page_title_tv" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="32dp"
            android:layout_above="@+id/main_container"
            android:text="New password willbe sent to email"
            android:textColor="#88323232"
            android:textAllCaps="false"
            android:layout_marginTop="4dp"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:paddingTop="24dp">
        <TextView
            android:id="@+id/massage_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUCCESS"
            android:textAlignment="center"
            android:visibility="invisible"
            style="@style/login_message_tv" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#AA888888">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/resend"
                android:imeOptions="actionNext"
                android:hint="@string/hint_name"
                android:inputType="textEmailAddress"
                style="@style/main_input_login_edittext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#AA888888">

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/resend"
                android:imeOptions="actionDone"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                style="@style/main_input_login_edittext" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_resend_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_resend_password"
        tools:ignore="UnusedAttribute"
        style="@style/main_login_btn"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>
